trunk/Archive2/37/a510ca0ccd112b/output
main.cpp:6:11: error: field has incomplete type 'A'
        T a;
          ^
main.cpp:14:11: note: in instantiation of template class 'D<A>' requested here
        u - v;
          ^
main.cpp:2:12: note: forward declaration of 'A'
    struct A; // incomplete type
           ^
1 error generated.
