trunk/Archive2/37/a510ca0ccd112b/main.cpp

    struct A; // incomplete type
    
    template<class T>
    struct D {
        T a;
        };
    
    template <class T>
    struct B { int * p = nullptr;  void operator -(const B&) const {}};
    
    int main() {
        B<D<A>> u, v;
        u - v;
    }